tests/compiler/unterminatedRegexAtEndOfSource1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/unterminatedRegexAtEndOfSource1.ts`, Apache-2.0 License

var a = / 
//~^ERROR: Unterminated regular expression literal.
